--- a/quix.yaml
+++ b/quix.yaml
@@ -127,26 +127,6 @@ deployments:
         description: Name of the output topic to write to.
         required: false
         value: sensor-data
-  - name: crash-detection
-    application: crash-detection
-    version: latest
-    deploymentType: Service
-    resources:
-      cpu: 500
-      memory: 1000
-      replicas: 1
-    desiredStatus: Running
-    variables:
-      - name: input
-        inputType: InputTopic
-        description: Name of the input topic to listen to.
-        required: false
-        value: sensor-data
-      - name: output
-        inputType: OutputTopic
-        description: Name of the output topic to write to.
-        required: false
-        value: events
   - name: FleetConsole Websockets
     application: fleet-console-web-sockets
     version: latest
@@ -234,54 +214,26 @@ deployments:
         description: ''
         required: true
         secretKey: influx_token
-  - name: PostgreSQL Sink
-    application: postgres-sink
+  - name: User behaviour
+    application: crash-detection
     version: latest
     deploymentType: Service
     resources:
-      cpu: 200
-      memory: 500
+      cpu: 500
+      memory: 1000
       replicas: 1
+    desiredStatus: Running
     variables:
       - name: input
         inputType: InputTopic
-        description: This is the input topic
-        required: true
+        description: Name of the input topic to listen to.
+        required: false
         value: sensor-data
-      - name: TABLE_NAME
-        inputType: FreeText
-        description: Name of the destination table.
-        required: true
-        value: postgres-cdc
-      - name: CONSUMER_GROUP
-        inputType: FreeText
-        description: Kafka consumer group.
-        required: true
-        value: postgres-sink-v1
-      - name: POSTGRES_PASSWORD
-        inputType: Secret
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
         required: false
-        secretKey: POSTGRES_PASSWORD_key
-      - name: POSTGRES_HOST
-        inputType: FreeText
-        required: false
-        value: quixpostgresql.postgres.database.azure.com
-      - name: POSTGRES_PORT
-        inputType: FreeText
-        required: false
-        value: 5432
-      - name: POSTGRES_DB
-        inputType: FreeText
-        required: false
-        value: postgres
-      - name: POSTGRES_USER
-        inputType: FreeText
-        required: false
-        value: postgres
-      - name: POSTGRES_TABLE_NAME
-        inputType: FreeText
-        required: false
-        value: sensordata
+        value: events
 
 # This section describes the Topics of the data pipeline
 topics:
@@ -289,3 +241,4 @@ topics:
   - name: raw
   - name: sensor-data
   - name: postgres-cdc
+  - name: transform
