--- a/crash-detection/app.yaml
+++ b/crash-detection/app.yaml
@@ -11,6 +11,11 @@ variables:
     description: Name of the output topic to write to.
     defaultValue: events
     required: false
+  - name: input2
+    inputType: InputTopic
+    description: ''
+    defaultValue: postgres-cdc
+    required: false
 dockerfile: dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
